--- a/package.json
+++ b/package.json
@@ -29,9 +29,20 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "babel-preset-stage-1": "^6.1.18",
+    "body-parser": "^1.16.1",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
+    "jquery": "^2.2.1",
+    "jsdom": "^8.1.0",
     "lodash": "^3.10.1",
+    "mocha": "^2.4.5",
     "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.0.0",
@@ -39,16 +50,6 @@
     "react-sparklines": "^1.6.0",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.3",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^15.4.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
